Basic command line 'Hello World'.